--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2484,8 +2484,9 @@ h4.title {
 	margin-bottom: 10px;
 }
 
-.btn-inline-favorite {
+.btn-inline-favorite, .btn-inline-label {
 	padding-left: 8px;
+	margin-right: 8px;
 	font-size: 16px;
 	color: #A9A9A9;
 	cursor: pointer;
@@ -2497,6 +2498,10 @@ h4.title {
 
 .btn-inline-favorite:hover {
 	color: rgb(255, 163, 0);
+}
+
+.btn-inline-label:hover {
+	color: #0A91AB;
 }
 
 .facet-list .list-group-item {
