Minor layout change

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -233,11 +233,11 @@
                 <div class="modal-body">
                     <table id="table-user-labels" class="table">
                         <tbody>
-{#                            <tr><td><i>No labels found.</i></td></tr>#}
-                            <tr>
-                                <td class="user-label">Test Label</td>
-                                <td><span class="glyphicon glyphicon-remove"></span></td>
-                            </tr>
+                            <tr><td><i>No labels found.</i></td></tr>
+{#                            <tr>#}
+{#                                <td class="user-label">Test Label</td>#}
+{#                                <td><span class="glyphicon glyphicon-remove"></span></td>#}
+{#                            </tr>#}
                         </tbody>
                     </table>
                 </div>
